# ramp-openmc

./: .gitignore  README.md  pyproject.toml  requirements.yml  ruff.toml  setup.py  tests_requirements.yml
.github/: pull_request_template.md
.github/workflows/: test.yml
openmcadapter/: __init__.py  mixture_adapter.py  openmc_oracle.py  plotting.py  slurm_settings.py  source.py
openmcadapter/geometry_adapter/: component_adapter.py  core_adapter.py  element_adapter.py  surface_adapter.py
openmcadapter/tally_adapter/: __init__.py  burnup_tallies.py  mesh_tallies.py  power_computation_tallies.py  surface_tallies.py
tests/: cross_sections.xml  pytest.ini  test_mixture_adapter.py  test_openmc_core_to_model.py  test_plotting.py  test_queries.py  test_source.py
tests/test_mixture_adapter/: test_openmc_material_mix0_.csv  test_openmc_material_mix10_.csv  test_openmc_material_mix11_.csv  test_openmc_material_mix1_.csv  test_openmc_material_mix2_.csv  test_openmc_material_mix3_.csv  test_openmc_material_mix4_.csv  test_openmc_material_mix5_.csv  test_openmc_material_mix7_.csv  test_openmc_material_mix8_.csv  test_openmc_material_mix9_.csv
tests/test_queries/: test_results_are_sensible.npz
tests/xs_data/: unfold_xs.sh
