[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramp-openmc"
authors = [
    {name = "Nuclear RAMP team", email = "nuclear.ramp.dev@gmail.com"},
]
description = "Adapter package for OpenMC as an Oracle"
dynamic = ["version"]
requires-python = ">=3.11, <3.14"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cytoolz",
    "distributed",
    "matplotlib",
    "multipledispatch",
    "numpy",
    "pandas",
    "ramp-coremaker",
    "ramp-corecompute",
    "scipy",
    "uncertainties",
    "xarray",
]

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-regressions",
]

[tool.setuptools.packages.find]
include = ['openmcadapter*']
exclude = ['tests*']

[tool.setuptools_scm]
